--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.ealyk.playlistmaker2.App"
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,13 +17,15 @@
         android:theme="@style/Theme.PlaylistMaker2"
         tools:targetApi="31">
         <activity
+            android:name=".AudioplayerActivity"
+            android:exported="true" />
+        <activity
             android:name=".SearchActivity"
             android:exported="false" />
         <activity
             android:name=".MediaActivity"
             android:exported="false" />
         <activity
-
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
