--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".App"
+        android:name="ui.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,16 +17,16 @@
         android:theme="@style/Theme.PlaylistMaker2"
         tools:targetApi="31">
         <activity
-            android:name=".AudioplayerActivity"
+            android:name="ui.AudioplayerActivity"
             android:exported="true" />
         <activity
-            android:name=".SearchActivity"
+            android:name="ui.SearchActivity"
             android:exported="false" />
         <activity
-            android:name=".MediaActivity"
+            android:name="ui.MediaActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,7 +35,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name="ui.SettingsActivity"
             android:exported="false" />
     </application>
 
