--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         </activity>
         <activity
             android:name="playlist.settings.ui.activity.SettingsActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
     </application>
 
 </manifest>
