--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ gson = "2.10"
 retrofit = "2.9.0"
 glide = "4.14.2"
 koin = "3.3.0"
+viewpager2 = "1.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -29,6 +30,7 @@ retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", ve
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide"}
 glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide"}
 koin = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+viewpager2 = {module = "androidx.viewpager2:viewpager2", version.ref = "viewpager2"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
